--- a/app/index.html
+++ b/app/index.html
@@ -82,14 +82,22 @@
 				<div class="showcase_item-img" style="background-image: url(../images/src/products/main/block5.jpg)"></div>
 		</article>
 </section>
+
 <div class="container">
-	<div class="showcase_video">
-		<div class="embed-responsive embed-responsive-16by9">
-			<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/i_sBctN-eRs" allowfullscreen></iframe>
-		</div>
+	<div class="showcase_video_wrap">
+		<a data-fancybox="video-showcase" href="https://www.youtube.com/watch?v=yAEtxVF4rjE" class="showcase_video_link">
+			<img src="./images/src/background/video_bg.jpg" class="showcase_video_bg">
+			<svg class="showcase_video_icon" width="70px" height="70px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="none"><path fill="red" d="M14.712 4.633a1.754 1.754 0 00-1.234-1.234C12.382 3.11 8 3.11 8 3.11s-4.382 0-5.478.289c-.6.161-1.072.634-1.234 1.234C1 5.728 1 8 1 8s0 2.283.288 3.367c.162.6.635 1.073 1.234 1.234C3.618 12.89 8 12.89 8 12.89s4.382 0 5.478-.289a1.754 1.754 0 001.234-1.234C15 10.272 15 8 15 8s0-2.272-.288-3.367z"/><path fill="#ffffff" d="M6.593 10.11l3.644-2.098-3.644-2.11v4.208z"/></svg>
+		</a>
 	</div>
 </div>
-<div class="paralax">
+
+
+
+
+
+
+<div class="paralax" style="background-image: url(../images/src/section-bg.jpg);">
 	<div class="paralax-wrap">
 		<h3>ПОСУДА MORSØ</h3>
 		<p>Посуда Morsø из чугуна для Вашей кухни - стильная и со вкусом</p>
@@ -105,7 +113,7 @@
 		<h3>Спросить специалиста</h3>
 		<p>Возможно, Вы хотите получить дополнительную информацию, прежде чем покупать печь Morso.
 		Поэтому мы предлагаем задать интересующие Вас вопросы специалисту - бесплатно и без обязательств.</p>
-		<a href="#" class="maininfo-btn">Задать вопрос</a>
+		<a href="#" class="maininfo-btn" data-fancybox="dialog" data-src="#modalAsk">Задать вопрос</a>
 	</div>
 
 	<div class="maininfo-item">
