--- a/app/index.html
+++ b/app/index.html
@@ -99,7 +99,7 @@
 
 <div class="paralax" style="background-image: url(../images/src/section-bg.jpg);">
 	<div class="paralax-wrap">
-		<h3>ПОСУДА MORSØ</h3>
+		<h3>ПОСУДА MORSØ - Բուխարիներ</h3>
 		<p>Посуда Morsø из чугуна для Вашей кухни - стильная и со вкусом</p>
 		<a href="#" class="paralax-btn">Пасуда в ассортименте</a>
 	</div>
