--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -28,16 +28,23 @@
 
 <body>
 	<!-- Custom HTML -->
-	<header class="head" style="background-image: url(../images/src/morso-bg2.jpg)">
+	<header class="head" style="background-image: url(../images/src/105_bg.jpg)">
 		<div class="naw-wrap">
-			<div class="naw-logo">
-				<a href="index.html" class="naw-logo-link">
-					<svg width="120" height="69">
-						<use xlink:href="#logo"></use>
-					</svg>
+
+			<div class="logo">
+				<a href="index.html" class="logo-link">
+					<div class="logo_img_wrap">
+						<img src="/images/src/logo_tisiji.png" alt="LOGO" class="logo_img">
+					</div>
+					<div class="logo_title_wrap">
+						<div class="logo_title">TISIJI</div>
+						<div class="logo_sub">Բուխարիներ</div>						 
+					</div>					
 				</a>
 			</div>
-			<div class="nav-mob-phone"><i class="fa fa-phone"></i>8-800-777-35-87</div>
+
+			<div class="nav-mob-phone"><i class="fa fa-phone"></i>+971 56-637-6527</div>
+
 			<div class="naw-btn">
 				<div class="menu-icon menu-icon-3">
 					<div class="bar bar-1"></div>
@@ -45,22 +52,26 @@
 					<div class="bar bar-3"></div>
 				</div>
 			</div>
+
 			<ul class="nav-list">
-				<li class="nav-item"><a href="catalog.html">Продукция</a></li>
-				<li class="nav-item"><a href="list.html">О MORSO</a></li>
-				<li class="nav-item"><a href="goods.html">Вдохновение</a></li>
-				<li class="nav-item"><a href="where.html">Где купить</a></li>
+				<li class="nav-item"><a href="catalog.html" class="nav-item_link">Продукция</a></li>
+				<li class="nav-item"><a href="list.html" class="nav-item_link">JOTUL GROUP</a></li>
+				<li class="nav-item"><a href="goods.html" class="nav-item_link">Вдохновение</a></li>
+				<li class="nav-item"><a href="where.html" class="nav-item_link">Где купить</a></li>
 			</ul>
 
 			<div class="nav-search">
-				<div class="nav-search-phone">8-800-777-35-87</div>
+				<div class="nav-search-phone">+971 56-637-6527</div>
 				<i class="fa fa-search" aria-hidden="true"></i><span class="nav-search-txt">Search</span>
 			</div>
+
+
+
 		</div>
 	</header>
 	<div class="search_wrap" id="title-search">
 		<form action="/search/index.php" class="form-wrap">
-			<input id="title-search-input" type="text" name="q" value="" autocomplete="off" class="search-form" placeholder="Ищем...">
+			<input id="title-search-input" type="text" name="q" value="" autocomplete="off" class="search-input" placeholder="Ищем...">
 			<button type="submit" name="s" class="search-btn"><span>Поиск</button>
 		</form>
 	</div>
