--- a/app/catalog.html
+++ b/app/catalog.html
@@ -71,7 +71,7 @@
 			<!-- Первый уровень раздела -->
 			<div class="catalog-list">
 				<div class="catalog-list-title">
-					<h3 class="catalog-list-name"><a href="#">ДЛя кухни</a></h3>
+					<h3 class="catalog-list-name"><a href="#">Для кухни</a></h3>
 					<a href="#" class="catalog-list-diler">Дилеры</a>
 				</div>
 				<!-- список подраздела раздела -->
