--- a/app/goods.html
+++ b/app/goods.html
@@ -1,12 +1,6 @@
 <!--#set var="title" value="OptimizedHTML 5" -->
 <!--#include virtual="/parts/header.html" -->
 
-	<div class="search_wrap" id="title-search">
-		<form action="/search/index.php" class="form-wrap">
-			<input id="title-search-input" type="text" name="q" value="" autocomplete="off" class="search-form" placeholder="Ищем...">
-			<button type="submit" name="s" class="search-btn"><span>Поиск</button>
-		</form>
-	</div>
 	<div class="container">
 		<h1 class="title">Чугунная печь-камин MORSØ 2B CLASSIC</h1>
 		<div class="breadcrumb">
@@ -40,7 +34,7 @@
 			<div class="goods_discrip-img">
 				<div class="goods_img-wrap">
 					<a  href="images/src/products/prodact/0.jpg">
-						<img src="images/src/products/prodact/0.jpg" class="goods_img" id="prodactImg" alt="Товар">
+						<img src="images/src/products/prodact/0.jpg" class="goods_img" id="productImg" alt="Товар">
 					</a>
 				</div>
 
@@ -102,7 +96,7 @@
 				<div class="goods_info-item">
 					<a href="#" class="goods_info-logo_link">
 						<img src="/images/src/logo-jotul.jpg" alt="LOGO" class="goods_info-logo">
-					</a>												
+					</a>
 				</div>
 
 				<div class="goods_info-item">
@@ -168,6 +162,7 @@
 				<div class="goods_doc-list">
 					<H4>Инструкции, руководства, скачать:</H4>
 					<ul>
+						<li><a href="#" data-fancybox data-src="#acsessuary"><i class="fa fa-angle-right"></i>Аксессуары для JOTUL F3 CB BP</a></li>
 						<li><a href="#"><i class="fa fa-angle-right"></i>72361600 _-_ 3600_d-ru_dk_eng (PDF)</a></li>
 						<li><a href="#"><i class="fa fa-angle-right"></i>mors_3600_serie_datablad (PDF)</a></li>
 					</ul>
@@ -179,7 +174,7 @@
 						</ul>
 
 				</div>
-				<!-- 
+				<!--
 				<div class="goods_doc-size">
 					<a href="img/products/prodact/2b-classic.jpg" data-fancybox>
 						<img src="images/src/products/prodact/2b-classic.jpg" alt="Размеры MORSØ 2B CLASSIC">
@@ -189,7 +184,9 @@
 
 			</div>
 
-
+		<div class="goods_acsessuary" id="acsessuary">
+			<table cellspacing="0" class="acsessuary"> <tr> <td> Дополнительное оборудование для  J0TUL F 3 SERIES / J0TUL F 8 </td> <td>Артикул</td> </tr> <tr> <td> Комплект для подключения для Jotul F 3 TD / Jotul F 8 TD задний выход </td> <td> JGA020127 </td> </tr> <tr> <td> Комплект для подключения для Jotul F 3 TD / Jotul F 8 TD верхний выход </td> <td> JGA020126 </td> </tr> <tr> <td> Переходник стальной 0 150 х 100 для Jotul F 3 TD / Jotul F 8 </td> <td> JGA022005 </td> </tr> <tr> <td> Накопительная масса HSS 06 для Jotul F3 / Jotul F8 </td> <td> JGA030006 </td> </tr> <tr> <td> Гриль для Jotul F 3 TD / Jotul F 8 TD </td> <td> JGA042001 </td> </tr> <tr> <td> Нагревательная плита для Jotul F 3 TD / Jotul F 8 </td> <td> JGA043155 </td> </tr> <tr> <td> Переходник стальной 0 150 со шнуром для Jotul F 3 эмалированных (от 2012 г.) </td> <td> JGA022004 </td> </tr> <tr> <td> Переходник стальной 0 173 / 0150 х 120 для Jotul F 3 TD / Jotul F 8 </td> <td> JGA022008 </td> </tr> </table>
+		</div>
 
 
 
