--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -38,14 +38,14 @@
 					</div>
 					<div class="logo_title_wrap">
 						<div class="logo_title">TISIJI</div>
-						<div class="logo_sub">Բուխարիներ</div>						 
-					</div>					
+						<div class="logo_sub">Բուխարիներ</div>
+					</div>
 				</a>
 			</div>
 
 			<div class="nav-mob-phone"><i class="fa fa-phone"></i>+971 56-637-6527</div>
 
-			<div class="naw-btn">
+			<div class="naw-btn" id="mobMwnuBtn">
 				<div class="menu-icon menu-icon-3">
 					<div class="bar bar-1"></div>
 					<div class="bar bar-2"></div>
@@ -53,7 +53,7 @@
 				</div>
 			</div>
 
-			<ul class="nav-list">
+			<ul class="nav-list" id="menuList">
 				<li class="nav-item"><a href="catalog.html" class="nav-item_link">Продукция</a></li>
 				<li class="nav-item"><a href="list.html" class="nav-item_link">JOTUL GROUP</a></li>
 				<li class="nav-item"><a href="goods.html" class="nav-item_link">Вдохновение</a></li>
@@ -62,14 +62,14 @@
 
 			<div class="nav-search">
 				<div class="nav-search-phone">+971 56-637-6527</div>
-				<i class="fa fa-search" aria-hidden="true"></i><span class="nav-search-txt">Search</span>
+				<i class="fa fa-search" aria-hidden="true" id="searchBtn"></i><span class="nav-search-txt">Search</span>
 			</div>
 
 
 
 		</div>
 	</header>
-	<div class="search_wrap" id="title-search">
+	<div id="search" class="search_wrap">
 		<form action="/search/index.php" class="form-wrap">
 			<input id="title-search-input" type="text" name="q" value="" autocomplete="off" class="search-input" placeholder="Ищем...">
 			<button type="submit" name="s" class="search-btn"><span>Поиск</button>
