--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -13,7 +13,7 @@
 		<div class="modal_fild">
 			<label>Сообщение</label>
 			<textarea name="message" rows="5"></textarea>
-		</div>		
+		</div>
 		<input type="submit" name="submit" value="Отправить" class="modal_btn">
 	</form>
 </div>
@@ -65,7 +65,7 @@
 	</div>
 </footer>
 
-<div id="upbutton"></div>
+<div id="upbutton" class="upbutton"></div>
 <svg style="display: none">
 <symbol viewBox="0 0 130 75" id="logo">
 	<path id="elem_O" d="M35.12,56.81c.23,.75,.42,1.5,.42,3.62,0,1.08,0,4.54-1.96,6.89-.88,1.08-2.15,1.83-3.64,1.83-2.3,0-3.3-1.75-3.52-2.37l8.7-9.97Zm5.99-6.86c.15-.2,.36-.36,.22-.5-.3-.32-2.27-.18-2.46-.12-.14,.05-.28,.11-.46,.33l-1.07,1.22c-1.07-.72-3.03-2.06-7.02-2.06-7.52,0-11.97,5.45-11.97,12.47,0,2.71,.65,5.71,2.96,8.03l-2.23,2.57c-.11,.13-.28,.31-.25,.42,.08,.27,2.32,.16,2.49,.13,.3-.05,.37-.16,.58-.39l1.1-1.26c.96,.72,3.07,2.22,7.18,2.22,6.94,0,11.86-4.99,11.86-12.53,0-3.13-.84-5.71-3.03-8.13l2.12-2.39Zm-15.7,14.6c-.27-.72-.58-1.6-.58-4.18,0-5.52,2.88-8.36,5.76-8.36,1.92,0,3.11,1.29,3.55,2.46l-8.73,10.07Z" fill="#001b26"/>
@@ -75,7 +75,7 @@
 	<path id="elem_L" d="M96.01,67.55h7.3c.45,0,.84,0,.84,.72v3.4c0,.72-.39,.78-.84,.78h-13.19c-.61,0-.84-.13-.87-.85v-21.41c.03-.78,.48-.78,.84-.78h5.05c.52,0,.84,.06,.87,.75v17.4Z" fill="#001b26"/>
 	<path id="elem_J" d="M14.98,50.17c-.03-.76-.48-.76-.84-.76h-5.05c-.52,0-.84,.06-.87,.73v14.62c0,3-1.03,3.67-3.32,3.84-2.03,.15-3.88-1.1-3.88-1.1-.66-.43-1.02-.31-1.02,.31,0,0,0,2.54,0,3.3,0,.92,3.05,1.9,5.21,1.9,3.5,0,5.82-.73,7.45-1.92,1.5-1.1,2.31-2.42,2.32-5.16v-15.75Z" fill="#001b26"/>
 	<path id="elem_R" d="M101.97,51.38c0,.25-.2,.49-.7,.49h-.31v-.91h.45c.39,0,.56,.12,.56,.41Zm.65,2.24l-.64-.97c-.12-.19-.24-.36-.31-.44,.49-.05,.81-.37,.81-.89,0-.47-.29-.77-1.03-.77h-1v3.08h.5v-1.36h.21l.85,1.36h.6Zm-1.19-3.87c1.29,0,2.31,1.09,2.31,2.38s-1.02,2.32-2.31,2.32-2.31-1.1-2.31-2.38,1.03-2.32,2.31-2.32Zm0-.39c-1.51,0-2.73,1.22-2.73,2.73s1.18,2.73,2.73,2.73,2.75-1.25,2.75-2.73-1.2-2.73-2.75-2.73Z" fill="#001b26"/>
-  
+
 </symbol>
 <symbol viewBox="0 0 84.78 59.41" id="logo-jotul">
 
@@ -86,7 +86,7 @@
 		<path d="M78.14,54.97h5.94c.37,0,.68,0,.68,.58v2.77c0,.58-.31,.64-.68,.64h-10.74c-.5,0-.68-.11-.71-.69v-17.43c.03-.64,.39-.64,.68-.64h4.11c.42,0,.68,.05,.71,.61v14.16Z" fill="#001522"/>
 		<path d="M12.19,40.83c-.03-.62-.39-.62-.68-.62H7.4c-.42,0-.68,.05-.71,.6v11.9c0,2.44-.84,2.99-2.7,3.13-1.66,.13-3.16-.9-3.16-.9-.54-.35-.83-.26-.83,.25,0,0,0,2.07,0,2.68,0,.75,2.48,1.54,4.24,1.54,2.85,0,4.74-.59,6.06-1.56,1.22-.9,1.88-1.97,1.89-4.2v-12.82Z" fill="#001522"/>
 		<path d="M82.99,41.82c0,.21-.17,.4-.57,.4h-.26v-.74h.36c.31,0,.46,.1,.46,.34Zm.53,1.82l-.52-.79c-.1-.15-.19-.29-.25-.36,.4-.04,.66-.3,.66-.73,0-.38-.24-.63-.83-.63h-.81v2.5h.41v-1.11h.17l.69,1.11h.49Zm-.96-3.15c1.05,0,1.88,.89,1.88,1.93s-.83,1.89-1.88,1.89-1.88-.9-1.88-1.93,.84-1.89,1.88-1.89Zm0-.31c-1.23,0-2.22,1-2.22,2.22s.96,2.22,2.22,2.22,2.24-1.02,2.24-2.22-.98-2.22-2.24-2.22Z" fill="#001522"/>
-		  
+
 </symbol>
 
 
@@ -101,19 +101,6 @@
 	<path d="M126.41,100.6c-.75,0-1.36,.61-1.36,1.35s.59,1.35,1.36,1.35,1.37-.62,1.37-1.35-.59-1.35-1.37-1.35m0,.19c.64,0,1.15,.54,1.15,1.18s-.51,1.15-1.15,1.15-1.14-.55-1.14-1.18,.51-1.15,1.14-1.15m.59,1.92l-.31-.48c-.06-.09-.12-.18-.15-.22,.24-.02,.4-.18,.4-.44,0-.23-.14-.38-.51-.38h-.5v1.53h.25v-.67h.1l.43,.67h.29Zm-.32-1.11c0,.13-.1,.25-.35,.25h-.16v-.45h.23c.19,0,.28,.06,.28,.2" fill="#877766"/>
 	<path d="M48.66,35.6c-1.65-1.7-6.17-5.42-7.67-10.01-1.25-3.83,.24-9.08,5.46-13.01,1.49-1.12,.46-2.06-1.08-1.33-2.75,1.3-7.24,4.47-8.75,9.89-2.08,7.46,1.91,13.36,6.02,17.55,4.37,4.83,10.05,8.58,11.61,13.82,1.15,3.86-.41,8.96-5.29,12.86-.94,.75-.06,1.95,.91,1.47,2.73-1.35,8.04-5,9.35-10.47,2.29-9.55-6.46-17.05-10.57-20.78Z" fill="#f6921e"/>
 </symbol>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 <symbol viewBox="0 0 70 70" id="briefcase">
