--- a/app/index.html
+++ b/app/index.html
@@ -113,7 +113,7 @@
 		<h3>Спросить специалиста</h3>
 		<p>Возможно, Вы хотите получить дополнительную информацию, прежде чем покупать печь Morso.
 		Поэтому мы предлагаем задать интересующие Вас вопросы специалисту - бесплатно и без обязательств.</p>
-		<a href="#" class="maininfo-btn" data-fancybox="dialog" data-src="#modalAsk">Задать вопрос</a>
+		<a href="/url-adrs" class="maininfo-btn" id="askBtn">Задать вопрос</a>
 	</div>
 
 	<div class="maininfo-item">
@@ -132,7 +132,7 @@
 			<h3>Каталог</h3>
 			<p>Если вы заинтересованы в покупке печи Morsø и хотели бы ознакомится с характеристиками и
 				посмотреть фото печей Morsø в интерьере, смотрите и выбирайте!</p>
-			<a href="#" class="maininfo-btn">Перейти в каталог</a>
+			<a href="/url-link" class="maininfo-btn" >Перейти в каталог</a>
 	</div>
 </div>
 </div>
